большой рефакторинг + тесты